--- a/10-Lab-05/ems/src/main/resources/application.properties
+++ b/10-Lab-05/ems/src/main/resources/application.properties
@@ -3,3 +3,13 @@ spring.application.name=ems
 server.servlet.context-path=/ems
 
 server.port=9999
+
+
+spring.datasource.url=jdbc:mysql://localhost:3306/gl-ems
+
+spring.datasource.username=root
+spring.datasource.password=mypassword_11
+spring.jpa.hibernate.ddl-auto=update
+
+spring.jpa.show-sql=true
+
