--- a/11-Mentoring-06/slma/pom.xml
+++ b/11-Mentoring-06/slma/pom.xml
@@ -71,6 +71,12 @@
 	      <groupId>com.mysql</groupId>
 	      <artifactId>mysql-connector-j</artifactId>
 	  </dependency>  
+	  
+	  
+	  <dependency>
+	    <groupId>org.springframework.boot</groupId>
+	    <artifactId>spring-boot-starter-security</artifactId>
+	  </dependency>      	  
 		
 	</dependencies>
 
