--- a/11-Mentoring-06/slma/src/main/resources/application.properties
+++ b/11-Mentoring-06/slma/src/main/resources/application.properties
@@ -12,4 +12,7 @@ spring.datasource.username=root
 spring.datasource.password=mypassword_11
 spring.jpa.hibernate.ddl-auto=update
 
-spring.jpa.show-sql=true    
+spring.jpa.show-sql=true
+
+#spring.security.user.name=admin
+#spring.security.user.password=mypassword
