--- a/12-Lab-06/ssrs/pom.xml
+++ b/12-Lab-06/ssrs/pom.xml
@@ -56,6 +56,17 @@
       <scope>provided</scope>
   </dependency>
       
+      
+  <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-data-jpa</artifactId>
+  </dependency>
+
+  <dependency>
+      <groupId>com.mysql</groupId>
+      <artifactId>mysql-connector-j</artifactId>
+  </dependency>  
+      
   <dependency>
       <groupId>org.glassfish.web</groupId>
       <artifactId>jakarta.servlet.jsp.jstl</artifactId>
