--- a/12-Lab-06/ssrs/src/main/resources/application.properties
+++ b/12-Lab-06/ssrs/src/main/resources/application.properties
@@ -6,3 +6,12 @@ server.port=9999
 
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
+
+
+spring.datasource.url=jdbc:mysql://localhost:3306/ssrs
+
+spring.datasource.username=root
+spring.datasource.password=mypassword_11
+spring.jpa.hibernate.ddl-auto=update
+
+spring.jpa.show-sql=true
